# code-examples

ceres_and_proto/: CMakeLists.txt  pose_graph_3d.cc  pose_graph_3d_error_term.h  read_g2o.h  read_graph.cc  types.h
ceres_and_proto/core/: CMakeLists.txt  proto_utils.h
ceres_and_proto/core/proto/: CMakeLists.txt  dam.proto  graph.proto
cmake-protobuf-example/proto/: CMakeLists.txt
eigen_pybind11/src/: CMakeLists.txt  distance_transform_utils.cc  distance_transform_utils.h  funcs.cc  geometry_utils.cc  geometry_utils.h  math_utils.cc  math_utils.h
eigen_pybind11/src/python-binding/: CMakeLists.txt  pybind11_interface.cc  setup.py  wrapper_test.py
opencv_pybind11/src/: CMakeLists.txt  depth_utils.cc  depth_utils.h
opencv_pybind11/src/python-binding/: CMakeLists.txt  cv_wrapper_test.py  cv_wrapper_v1_interface.cc  cv_wrapper_v1_test.py  cv_wrapper_v2_interface.cc  cv_wrapper_v2_test.py  mat_wrapper.cc  mat_wrapper.h  ndarray_converter.cc  ndarray_converter.h  pybind11_interface.cc
